edit system deck
